# cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.sh
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: api.rs  auth.rs  cli.rs  config.rs  main.rs  ws.rs
crates/cli/src/commands/: audio.rs  chat.rs  config_cmd.rs  dms.rs  friends.rs  join.rs  login.rs  mod.rs  servers.rs  setup.rs  status.rs
crates/cli/src/tui/: app.rs  keybindings.rs  mod.rs  theme.rs  ui.rs
crates/cli/src/tui/widgets/: audio_settings.rs  chat.rs  dm_view.rs  friend_list.rs  mod.rs  participant_list.rs  room_view.rs  server_list.rs  status_bar.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
crates/voice-core/: Cargo.toml
crates/voice-core/src/: lib.rs  settings.rs
crates/voice-core/src/audio/: codec.rs  denoise.rs  engine.rs  mod.rs  vad.rs
crates/voice-core/src/input/: mod.rs  ptt.rs
crates/voice-core/src/voice/: mod.rs  room.rs
