[package]
name = "lag-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for Lag crates"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = "5"
